--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.4",
-        "livewire/livewire": "2.*"
+        "livewire/livewire": "2.*",
+        "spatie/laravel-permission": "^6.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
